- синтаксический сахар над алгоритмами стратегий и логикой расстановки